# paradeinjest

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  chat.md  diesel.toml  justfile  podman-compose.yml
migrations/00000000000000_initial/: down.sql  up.sql
sample_data/customer_a/: file1.csv  file2.csv  file3.csv
sample_data/customer_b/: file1.csv  file2.csv  file3.csv
sql/: init.sql
src/: config.rs  error.rs  main.rs  routes.rs
src/db/: diesel_schema.rs  migrations.rs  mod.rs  pool.rs  schema.rs
src/handlers/: analytics.rs  mod.rs  process.rs  search.rs  upload.rs
src/models/: bronze.rs  gold.rs  mod.rs  silver.rs
src/services/: analytics.rs  embedding.rs  ingestion.rs  mod.rs  search.rs  sentiment.rs  silver.rs  transformation.rs
