[package]
name = "paradeinjest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
time = { version = "0.3", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
pgvector = { version = "0.4", features = ["sqlx"] }
