[package]
name = "paradeinjest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
diesel = { version = "2.2", features = ["postgres", "serde_json", "time"] }
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
futures-util = { version = "0.3", features = ["alloc", "sink", "std"] }
diesel_migrations = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
bb8 = "0.8"
anyhow = "1"
async-trait = "0.1"
pgvector = { version = "0.4", features = ["diesel"] }
